Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prevair-experiment.data.gouv.fr",
+  "name": "prevair-experiment-ui",
   "private": true,
   "version": "1.0.0",
   "description": "",
