--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^16.2.0",
     "react-autocomplete": "^1.7.2",
     "react-dom": "^16.2.0",
-    "react-icons": "^2.2.7"
+    "react-icons": "^2.2.7",
+    "underscore.string": "^3.3.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
